message ServerIdentity {
    optional bytes public = 1;
    optional bytes id = 2;
    required string address = 3;
    optional string description = 4;
}

message Roster {
    optional bytes id = 1;
    repeated ServerIdentity list = 2;
    optional bytes aggregate = 3;
}

message Election {
    required string name = 1;
    required uint32 creator = 2;
    repeated uint32 users = 3;
    optional bytes key = 4;
    optional bytes data = 5;
    optional string description = 6;
    optional string end = 7;
}

message Ballot {
    required uint32 sciper = 1;
    required bytes alpha = 2;
    required bytes beta = 3;
    optional bytes clear = 4;
}

message Box {
    repeated Ballot ballots = 1;
}

message Link {
    required string ping = 1;
    optional Roster roster = 2;
    optional bytes key = 3;
    repeated uint32 admins = 4;
}

message LinkReply {
    optional bytes master = 1;
}

message Login {
    required bytes master = 1;
    required uint32 sciper = 2;
    required bytes signature = 3;
}

message LoginReply {
    required string token = 1;
    repeated Election elections = 2;
}

message Open{
    required string token = 1;
    required Election election = 2:
}

message OpenReply {
    required bytes genesis = 1;
    required bytes key = 2;
}

message Cast {
    required string token = 1;
    required bytes genesis = 2;
    required Ballot ballot = 3;
}

message CastReply {
    required bytes block = 1;
}

message Finalize {
    required string token = 1;
    required bytes genesis = 2;
}

message FinalizeReply {
    required string token = 1;
    required bytes shuffle = 2;
    required bytes decryption = 3;
}

message Aggregate {
    required string token = 1;
    required bytes genesis = 2;
    enum Type {
        BALLOTS = 0;
	SHUFFLE = 1;
	DECRYPTION = 2;
    }
    required Type type = 3;
}

message AggregateReply {
    required Box box = 1;
}